fix layout issues with new activeadmin

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -152,3 +152,13 @@ body.active_admin {
 .select2-container--default .select2-results__option[aria-disabled=true] {
   display: none;
 }
+
+
+// fixing layout issues https://github.com/activeadmin/activeadmin/issues/7667
+body.active_admin {
+  *,
+  *:before,
+  *:after {
+    box-sizing: unset;
+  }
+}
